@@ -1,5 +1,6 @@
 test:
 	./test_checkbashisms
 	./test_dd-list
+	./test_debchange
 
 .PHONY: test
