@@ -21,7 +21,12 @@ devscripts (2.11.8) UNRELEASED; urgency=low
       downloaded.
     + Adapt find_repo() to determine the tarball name for native packages.
 
- -- David Prévot <taffit@debian.org>  Sun, 06 May 2012 23:26:05 -0400
+  [ Benjamin Drung ]
+  * debchange:
+    + Add --vendor= and DEBCHANGE_VENDOR to override the distributor ID
+      returned by dpkg-vendor.
+
+ -- Benjamin Drung <bdrung@debian.org>  Mon, 28 May 2012 17:14:12 +0200
 
 devscripts (2.11.7) unstable; urgency=low
 
